# seshat

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  LICENSE-APACHE2  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  app.bzl  moduleindex.yaml  rebar.config  rebar3.crashdump
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yml  publish-rabbitmq-bcr.yml  release.yml  test.yml
bzl/: BUILD.eunit_formatters
src/: seshat.app.src  seshat.erl  seshat.hrl  seshat_app.erl  seshat_counters.erl  seshat_counters_server.erl  seshat_sup.erl
test/: seshat_SUITE.erl  seshat_counters_server_SUITE.erl  seshat_counters_server_test.erl  seshat_counters_test.erl  seshat_test.erl
